# py-bitswap

./: .gitignore  .travis.yml  Makefile  README.md  Roadmap.md  chat.py  client.py  diary.txt  pyproject.toml  requirements.txt  requirements_testing.txt  server.py  setup.py  tox.ini
bitswap/: IPFSBlock.py  __init__.py  bitswap.py  utils.py
bitswap/decision_engine/: DecisionEngine.py  Ledger.py  __init__.py
bitswap/message/: BitswapMessage.py  MessageEntry.py  __init__.py  message.proto  message_pb2.py
bitswap/multihashing/: __init__.py  multihashing.py
bitswap/types/wantlist/: WantList.py  WantListEntry.py
bitswap/varint_decoder/: __init__.py  varint_decoder.py
bitswap/want_manager/: MessageQueue.py  WantManager.py  __init__.py
bitswap/wantlist/: WantList.py  WantListEntry.py  __init__.py
p2p/: chat.py  client.py  server.py
research/: js_bitswap_inference.txt
src/: bitswap.py  log.py
src/types/wantlist/: WantListEntry.py
test/: run_tests.py  test_IPFSBlock.py  test_multihashing.py  test_varint_decoder.py
test/decision_engine/: test_Ledger.py
test/message/: test_BitswapMessage.py  test_MessageEntry.py
test/wantlist/: test_WantList.py  test_WantListEntry.py
